@@ -10,8 +10,7 @@ fn main() {
     use std::thread;
     use std::time;
 
-    use serialport::posix::TTYPort;
-    use serialport::SerialPort;
+    use serialport::{SerialPort, TTYPort};
 
     let (mut master, mut slave) = TTYPort::pair().expect("Unable to create pseudo-terminal pair");
 
