@@ -47,13 +47,15 @@ pub mod prelude {
     pub use crate::{SerialPort, SerialPortInfo, SerialPortSettings};
 }
 
-/// The implementation of serialport for POSIX-based systems (Linux, BSD, Mac)
 #[cfg(unix)]
-pub mod posix;
+mod posix;
+#[cfg(unix)]
+pub use posix::{BreakDuration, TTYPort};
 
-/// The implementation of serialport for Windows systems
 #[cfg(windows)]
-pub mod windows;
+mod windows;
+#[cfg(windows)]
+pub use windows::COMPort;
 
 /// A type for results generated by interacting with serial ports
 ///
