@@ -8,8 +8,7 @@ use std::os::unix::prelude::*;
 use std::str;
 use std::time::Duration;
 
-use serialport::posix::TTYPort;
-use serialport::SerialPort;
+use serialport::{SerialPort, TTYPort};
 
 #[test]
 fn test_ttyport_pair() {
